--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.20.0",
+    "mousetrap": "^1.6.5",
     "next": "9.5.3",
+    "postcss-import": "^12.0.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-hot-keys": "^2.6.0",
+    "swr": "^0.3.5",
+    "tailwindcss": "^1.8.10"
   }
 }
